- Fix bug where large canvases do not scroll well and are clipped - Remove extraneous code

--- a/room.css
+++ b/room.css
@@ -13,12 +13,13 @@ body {
 }
 
 #map {
-  display: flex;
+  display: grid;
   height: 100vh;
   width:  100vw;
   justify-content: center;
   align-items: center;
   background-color: lightgray;
+  overflow: auto;
 }
 
 #toolbar {
